Refactored karus.scss.

--- a/Ej.Client/Views/Karus/Waardenboom.cshtml
+++ b/Ej.Client/Views/Karus/Waardenboom.cshtml
@@ -3,7 +3,7 @@
 <h2>@ViewData["Title"]</h2>
 <p>@ViewData["SubTitle"]</p>
 
-<section class="karus m-3 m-lg-5">
+<section class="karus karus_waardenboom m-3 m-lg-5">
     <div class="row justify-content-center">
         <div class="col col-lg-6">
             
