--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -12,6 +12,11 @@
                 <partial name="_Crisisbox_EmergencyContacts" />
             </div>
         </div>
+        <div class="row g-3 mt-2">
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Spotify_Playlists" />
+            </div>
+        </div>
     </div>
 
 </section>
