--- a/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
+++ b/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
@@ -4,32 +4,36 @@
         new EmergencyContact {
             ImageUri = "/karus/crisisbox/emergencycontact-joke.webp",
             Name = "Joke",
-            PhoneNumber = "32477971857"
+            PhoneNumber = "32477971857",
+            SortNumber = 40
         },
         new EmergencyContact {
             ImageUri = "/karus/crisisbox/emergencycontact-bart.webp",
             Name = "Bart",
-            PhoneNumber = "32491171817"
+            PhoneNumber = "32491171817",
+            SortNumber = 20
         },
         new EmergencyContact {
             ImageUri = "/karus/crisisbox/emergencycontact-ann.webp",
             Name = "Ann",
-            PhoneNumber = "32468264636"
+            PhoneNumber = "32468264636",
+            SortNumber = 30
         },
          new EmergencyContact {
             ImageUri = "/karus/crisisbox/emergencycontact-karus.webp",
             Name = "Karus",
-            PhoneNumber = "32495511254"
+            PhoneNumber = "32495511254",
+            SortNumber = 10
         }
     };
 }
 
 <div class="card bg-danger text-white karus_emergency_contacts">
     <div class="card-body">
-        <h5 class="text-center">Emergency contacts</h5>
-        <div class="container mt-4">
+        <h5>Emergency contacts</h5>
+        <div class="container">
             <div class="row g-2">
-                @foreach(var contact in emergencyContacts)
+                @foreach(var contact in emergencyContacts!.OrderBy(c => c.SortNumber))
                 {
                     <div class="col col-3 text-center">
                         <a href="https://wa.me/@contact.PhoneNumber" title="Bel @contact.Name">
