--- a/Ej.Client/Views/Shared/_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Layout.cshtml
@@ -69,6 +69,8 @@
 
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
         <script src="~/js/js.cookie.min.js" asp-append-version="true"></script>
         <script src="~/js/ericjansen.js" asp-append-version="true"></script>
 
