--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -68,6 +68,7 @@ $bs-body-color: #f8f9fa;
     }
 }
 
+
 /*--------------------------------------------------------------
 # KARUS BALANS
 --------------------------------------------------------------*/
@@ -134,6 +135,13 @@ $bs-body-color: #f8f9fa;
 /*--------------------------------------------------------------
 # KARUS CRISISBOX EMERGENCY CONTACTS
 --------------------------------------------------------------*/
+.karus_crisisbox {
+    h5 {
+        margin-bottom: 1.2rem;
+        text-align: center;
+    }
+}
+
 .karus_emergency_contacts {
     a:hover {
         font-weight: bold;
@@ -144,7 +152,7 @@ $bs-body-color: #f8f9fa;
     }
 
     img:hover {
-        transform: scale(1.03);
+        transform: scale(1.7);
     }
 
     .contact-name {
@@ -159,4 +167,33 @@ $bs-body-color: #f8f9fa;
 /*--------------------------------------------------------------
 # KARUS CRISISBOX MONEYCOUNTER
 --------------------------------------------------------------*/
+.karus_moneycounter {
 
+    img {
+        max-width: 70%;
+        margin-bottom: 1rem;
+    }
+
+    .no-x {
+        div.time {
+            font-size: smaller;
+            line-height: 1.2rem;
+        }
+
+        div.euro {
+            font-size: larger;
+            font-weight: bolder;
+        }
+    }
+
+    .total {
+        font-size: 2rem;
+        font-weight: bolder;
+    }
+}
+
+/*--------------------------------------------------------------
+# KARUS CRISISBOX SPOTIFY PLAYLIST
+--------------------------------------------------------------*/
+.karus_spotify_playlist {
+}
