--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -1,3 +1,5 @@
+@model CrisisboxViewModel
+
 <h2>@ViewData["Title"]</h2>
 <p>@ViewData["SubTitle"]</p>
 
@@ -9,12 +11,18 @@
                 <partial name="_Crisisbox_MoneyCounter" />
             </div>
             <div class="col col-12 col-md-6">
-                <partial name="_Crisisbox_EmergencyContacts" />
+                <partial name="_Crisisbox_EmergencyContacts" 
+                         model="@Model.EmergencyContacts" />
             </div>
         </div>
         <div class="row g-3 mt-2">
             <div class="col col-12 col-md-6">
-                <partial name="_Crisisbox_Spotify_Playlists" />
+                <partial name="_Crisisbox_Spotify_Playlists" 
+                         model="@Model.SpotifyMusic" />
+            </div>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Spotify_Playlists" 
+                         model="@Model.SpotifyShows" />
             </div>
         </div>
     </div>
