--- a/Ej.Client/Views/Shared/_Crisisbox_Spotify_Playlists.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Spotify_Playlists.cshtml
@@ -7,12 +7,15 @@
 
             @if (Model.Items.Count > 0)
             {
+                <div class="row g-2">
                 @foreach (var playlist in Model.Items)
                 {
-                <div>
-                    <iframe src="@playlist.Uri" width="100%" height="@((int)playlist.Size)" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                </div>
+
+                    <div class="col col-12">
+                        <iframe src="@playlist.Uri" width="100%" height="@((int)playlist.Size)" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
                 }
+                </div>
             }
         </div>
     </div>
