Fixed Waardenboom issue.

--- a/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
+++ b/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card bg-danger text-white karus_emergency_contacts">
     <div class="card-body">
-        <h5>Emergency contacts</h5>
+        <h5>Emergency Contacts</h5>
         <div class="container">
             <div class="row g-2">
                 @if (Model is null)
