Added Karus Inspirational Quotes.

--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -164,6 +164,7 @@ $bs-body-color: #f8f9fa;
     }
 }
 
+
 /*--------------------------------------------------------------
 # KARUS CRISISBOX MONEYCOUNTER
 --------------------------------------------------------------*/
@@ -192,8 +193,16 @@ $bs-body-color: #f8f9fa;
     }
 }
 
+
 /*--------------------------------------------------------------
 # KARUS CRISISBOX SPOTIFY PLAYLIST
 --------------------------------------------------------------*/
 .karus_spotify_playlist {
+}
+
+
+/*--------------------------------------------------------------
+# KARUS CRISISBOX QUOTES
+--------------------------------------------------------------*/
+.karus_quotes {
 }
