--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -25,6 +25,12 @@
                          model="@Model.SpotifyShows" />
             </div>
         </div>
+        <div class="row g-3 mt-2">
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Quotes"
+                         model="@Model.Quotes" />
+            </div>
+        </div>
     </div>
 
 </section>
