Created separate layout for Karus.

--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<OpdrachtItem>
+﻿@{
+    Layout = "~/Views/Shared/_Karus_Layout.cshtml";
+}
+
+@model List<OpdrachtItem>
 
 <h2>@ViewData["Title"]</h2>
 
