--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -6,7 +6,7 @@
 <section class="karus karus_crisisbox">
 
     <div class="container p-0">
-        <div class="row g-3">
+        <div class="row g-4" data-masonry='{"percentPosition": true }'>
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_MoneyCounter" />
             </div>
@@ -14,8 +14,6 @@
                 <partial name="_Crisisbox_EmergencyContacts" 
                          model="@Model.EmergencyContacts" />
             </div>
-        </div>
-        <div class="row g-3 mt-2">
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Spotify_Playlists" 
                          model="@Model.SpotifyMusic" />
@@ -24,8 +22,6 @@
                 <partial name="_Crisisbox_Spotify_Playlists" 
                          model="@Model.SpotifyShows" />
             </div>
-        </div>
-        <div class="row g-3 mt-2">
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Quotes"
                          model="@Model.Quotes" />
