--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -42,8 +42,8 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="~/css/ericjansen.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/karus.min.css" asp-append-version="true" />
+
     </head>
 
     <body>
@@ -54,7 +54,7 @@
 
         <div class="container">
 
-            <partial name="_Header" />
+            <partial name="_Karus_Header" />
 
             <main>
 
@@ -63,7 +63,6 @@
             </main>
 
             <partial name="_Footer" />
-            <partial name="_GdprConsent" />
 
         </div>
 
@@ -73,7 +72,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
         <script src="~/js/js.cookie.min.js" asp-append-version="true"></script>
-        <script src="~/js/ericjansen.js" asp-append-version="true"></script>
         <script src="~/js/karus.moneycounter.min.js"></script>
 
     </body>
