--- a/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
+++ b/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
@@ -1,4 +1,8 @@
-﻿<h2>@ViewData["Title"]</h2>
+﻿@{
+    Layout = "~/Views/Shared/_Karus_Layout.cshtml";
+}
+
+<h1>@ViewData["Title"]</h1>
 <p>@ViewData["SubTitle"]</p>
 
 <section class="karus">
