--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -1,6 +1,10 @@
+@{
+    Layout = "~/Views/Shared/_Karus_Layout.cshtml";
+}
+
 @model CrisisboxViewModel
 
-<h2>@ViewData["Title"]</h2>
+<h1>@ViewData["Title"]</h1>
 <p>@ViewData["SubTitle"]</p>
 
 <section class="karus karus_crisisbox">
