--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -4,9 +4,9 @@
 
 @model List<OpdrachtItem>
 
-<h2>@ViewData["Title"]</h2>
+<h1>Opdrachten</h1>
 
-<section class="karus">
+<section class="karus_tasks">
 
     <div class="container p-0">
 
