--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -52,7 +52,7 @@
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9HCTPRT" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
-        <div class="container">
+        <div class="container karus">
 
             <partial name="_Karus_Header" />
 
