Styled Karus cirkel van verandering.

--- a/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
+++ b/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
@@ -5,8 +5,10 @@
 <h1>@ViewData["Title"]</h1>
 <p>@ViewData["SubTitle"]</p>
 
-<section class="karus">
+<section class="karus_cirkelvanverandering">
 
-    <img src="~/karus/data/cirkelvanverandering/cirkelvanverandering.png" alt="Cirkel van Verandering" />
+    <div class="container text-center">
+        <img src="~/karus/data/cirkelvanverandering/cirkelvanverandering.png" alt="Cirkel van Verandering" />
+    </div>
 
 </section>
