--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -9,7 +9,7 @@ $karus-body-color: var(--bs-gray-400);
 
 
 /*--------------------------------------------------------------
-# KARUS GENERAL
+# GENERAL
 --------------------------------------------------------------*/
 body, html {
     background-color: $karus-body-bg;
@@ -73,7 +73,7 @@ footer > p > a {
 }
 
 /*--------------------------------------------------------------
-# KARUS TASKS (INDEX)
+# TASKS (INDEX)
 --------------------------------------------------------------*/
 .karus_tasks {
 
@@ -94,7 +94,7 @@ footer > p > a {
 
 
 /*--------------------------------------------------------------
-# KARUS WAARDENBOOM
+# WAARDENBOOM
 --------------------------------------------------------------*/
 .karus_waardenboom {
 
@@ -128,9 +128,15 @@ footer > p > a {
     }
 }
 
+/*--------------------------------------------------------------
+# CIRKEL VAN VERANDERING
+--------------------------------------------------------------*/
+.karus_cirkelvanverandering {
+
+}
 
 /*--------------------------------------------------------------
-# KARUS BALANS
+# BALANS
 --------------------------------------------------------------*/
 .karus_balans {
     .accordion-item {
@@ -193,7 +199,7 @@ footer > p > a {
 
 
 /*--------------------------------------------------------------
-# KARUS CRISISBOX EMERGENCY CONTACTS
+# CRISISBOX EMERGENCY CONTACTS
 --------------------------------------------------------------*/
 .karus_crisisbox {
     h5 {
@@ -226,7 +232,7 @@ footer > p > a {
 
 
 /*--------------------------------------------------------------
-# KARUS CRISISBOX MONEYCOUNTER
+# CRISISBOX MONEYCOUNTER
 --------------------------------------------------------------*/
 .karus_moneycounter {
 
@@ -255,14 +261,14 @@ footer > p > a {
 
 
 /*--------------------------------------------------------------
-# KARUS CRISISBOX SPOTIFY PLAYLIST
+# CRISISBOX SPOTIFY PLAYLIST
 --------------------------------------------------------------*/
 .karus_spotify_playlist {
 }
 
 
 /*--------------------------------------------------------------
-# KARUS CRISISBOX QUOTES
+# CRISISBOX QUOTES
 --------------------------------------------------------------*/
 .karus_quotes {
 
