--- a/Ej.Client/Views/Karus/Waardenboom.cshtml
+++ b/Ej.Client/Views/Karus/Waardenboom.cshtml
@@ -45,7 +45,7 @@
                 <span id="modalContent"></span>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sluiten</button>
             </div>
         </div>
     </div>
