Finetunded some HTML elements.

--- a/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
+++ b/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
@@ -7,8 +7,58 @@
 
 <section class="karus_cirkelvanverandering">
 
+    <h2>De Cirkel van Verandering</h2>
     <div class="container text-center">
-        <img src="~/karus/data/cirkelvanverandering/cirkelvanverandering.png" alt="Cirkel van Verandering" />
+        <img class="img-fluid" src="~/karus/data/cirkelvanverandering/cirkelvanverandering.png" alt="Cirkel van Verandering" />
     </div>
+
+</section>
+
+<section class="karus_fasen_van_verandering">
+
+    <h2>Mijn Fasen van Verandering</h2>
+    <p>
+        Als alcoholist bevind ik me in meerdere fasen van de veranderingscirkel: <strong>Herval, Actieve Verandering, en Consolidatie</strong>.
+    </p>
+
+    <section class="fase">
+        <h3>Beslissingsfase</h3>
+        <p>
+            <strong>Niet lastig</strong>: Deze fase is voor mij niet moeilijk omdat ik al vijf of zes jaar geleden heb besloten om helemaal geen alcohol meer te drinken. Ik heb gekozen voor volledige abstinentie.
+        </p>
+    </section>
+
+    <section class="fase">
+        <h3>Herval</h3>
+        <p>
+            <strong>Terugval</strong>: Helaas ben ik teruggevallen na tien maanden nuchter.
+        </p>
+        <p>
+            <strong>Wat ik nu doe</strong>: Ik probeer te begrijpen wat de oorzaak van mijn terugval was, zodat ik het in de toekomst kan voorkomen. Ik had geen enkele reden om terug te drinken.
+        </p>
+    </section>
+
+    <section class="fase">
+        <h3>Actieve Verandering</h3>
+        <p>
+            <strong>Wat moet veranderen</strong>: Ik wil niet zielig alleen en / of in de goot eindigen dus er zijn duidelijke dingen die moeten veranderen, waaronder een gestructureerder leven en minder uitstelgedrag vertonen.
+        </p>
+        <p>
+            Maar elk herval wat leidde tot een opname, is gebeurd toen ik mij goed voelde, in goed gezelschap, in een goeie omgeving. Moet ik dat veranderen dan? Ik dacht het niet. Ik moet leren begrijpen waarom ik drink als ik me goed voel.
+        </p>
+    </section>
+
+    <section class="accordion">
+        <h3>Consolidatie</h3>
+        <p>
+            Tot anderhalve maand geleden was ik tien maanden nuchter. Dit succes geeft me de motivatie om opnieuw op te staan, door te gaan en mezelf te bewijzen.
+        </p>
+        <p>
+            <strong>Nazorg</strong> heb ik al lang geregeld.
+        </p>
+        <p>
+            Crisisbox gebruiken.
+        </p>
+    </section>
 
 </section>
