--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -20,7 +20,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="format-detection" content="telephone=no">
-        <meta name="title" content="@ViewData["MetaTitle"] - @_tenantProvider.Tenant?.Name">
+        <meta name="title" content="Karus - @_tenantProvider.Tenant?.Name">
         <meta name="description" content="This is the personal website website of @_tenantProvider.Tenant?.Name and serves as as his minimalistic online presence.">
         <meta name="author" content="Eric Jansen">
         <meta name="robots" content="follow, index" />
@@ -35,7 +35,7 @@
     }
 }
         <!-- Title -->
-        <title>@ViewData["Title"] - @_tenantProvider.Tenant?.Name</title>
+        <title>Karus - @_tenantProvider.Tenant?.Name</title>
 
         <link rel="icon" href="favicon.ico">
         <link rel="apple-touch-icon"  href="apple-touch-icon.png">
