Initialized Karus counter game.

--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -30,6 +30,9 @@
                 <partial name="_Crisisbox_Quotes"
                          model="@Model.Quotes" />
             </div>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_CounterGame" />
+            </div>
         </div>
     </div>
 
