--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -21,7 +21,7 @@
                             <div class="col-4 col-md-3 col-lg-4">
                                 @if (!string.IsNullOrEmpty(opdrachtValue.CardImageUri))
                                 {
-                                    <img src="@opdrachtValue.CardImageUri" class="card-img img-fluid p-4 bg-warning" alt="@opdrachtValue.Name">
+                                    <img src="@opdrachtValue.CardImageUri" class="card-img img-fluid p-4" alt="@opdrachtValue.Name">
                                 }
                             </div>
                             <div class="col-8 col-md-9 col-lg-8">
