--- a/Ej.Client/Views/Shared/_Karus_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout.cshtml
@@ -72,7 +72,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
         <script src="~/js/js.cookie.min.js" asp-append-version="true"></script>
-        <script src="~/js/karus.moneycounter.min.js"></script>
+        <script src="~/js/karus.moneycounter.min.js" asp-append-version="true"></script>
+        
 
     </body>
 
