--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -69,6 +69,10 @@ h3 {
     margin-bottom: 1.1rem;
 }
 
+h6 {
+    font-weight: lighter;
+}
+
 .modal {
 
     .modal-content {
@@ -387,33 +391,6 @@ footer > p > a {
 --------------------------------------------------------------*/
 .karus_countergame {
 
-    .modal-fullscreen {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-    }
-
-    .modal-content {
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-    }
-
-    .modal-body {
-        overflow: auto;
-    }
-
-    .svg-icon {
-        width: 50px;
-        height: 50px;
-        cursor: pointer;
-    }
-
-    .svg-icon.clicked {
-        filter: brightness(0.5);
-    }
-
     .radio-group {
         display: flex;
         flex-wrap: wrap;
@@ -443,5 +420,75 @@ footer > p > a {
         border-color: #0d6efd;
         background-color: #dce9ff;
         color: #0d6efd;
+    }
+
+    .color-group {
+        display: flex;
+        gap: 10px;
+    }
+
+    .color-circle {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 2px solid transparent;
+        transition: all 0.3s;
+    }
+
+    .color-circle:hover {
+        border-color: #0d6efd;
+    }
+
+    .color-circle.selected {
+        border-color: #0d6efd;
+    }
+
+    .modal-fullscreen {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+
+    .modal-content {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+
+    .modal-body {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+
+    .modal-body.clickable {
+        cursor: pointer;
+    }
+
+    .svg-container .svg-icon {
+        width: 50px;
+        height: 50px;
+        margin: 5px;
+    }
+
+    .svg-container img.clicked {
+        filter: brightness(0.5);
+    }
+
+    .counter-display {
+        font-size: 24px;
+        font-weight: bold;
+        margin-top: 20px;
     }
 }
