--- a/Ej.Client/Views/Karus/Waardenboom.cshtml
+++ b/Ej.Client/Views/Karus/Waardenboom.cshtml
@@ -39,9 +39,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalTitle">modalName</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body clickable">
                 <span id="modalContent"></span>
             </div>
             <div class="modal-footer">
