--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -77,9 +77,15 @@ h6 {
 
     .modal-content {
         background-color: var(--bs-gray-900);
-    } 
-}
+    }
 
+    .modal-header {
+
+        h5 {
+            margin-bottom: 0;
+        }
+    }
+}
 
 /*--------------------------------------------------------------
 # FOOTER
@@ -444,51 +450,13 @@ footer > p > a {
         border-color: #0d6efd;
     }
 
-    .modal-fullscreen {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-    }
-
-    .modal-content {
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-    }
-
     .modal-body {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-    }
-
-    .modal-body.clickable {
         cursor: pointer;
     }
 
-    .svg-container .svg-icon {
-        width: 50px;
-        height: 50px;
-        margin: 5px;
-    }
-
-    .svg-container img.clicked {
-        filter: brightness(0.5);
-    }
-
     .counter-display {
-        font-size: 24px;
+        font-size: 2rem;
         font-weight: bold;
-        margin-top: 20px;
+        margin-top: 1rem;
     }
 }
